--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "find blood donors on a map (MEAN + socket.io + arcGIS)",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "mocha ./tests/ --recursive"
+    "start": "nodemon app.js",
+    "test": "mocha ./test/ --recursive"
   },
   "repository": {
     "type": "git",
@@ -18,17 +18,35 @@
   },
   "homepage": "https://github.com/pedropa1va/donor-patient-app#readme",
   "dependencies": {
-    "angular": "^1.6.2",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-transform-react-jsx": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-runtime": "^6.23.0",
     "chai": "^3.5.0",
+    "chalk": "^1.1.3",
     "express": "^4.14.1",
     "mocha": "^3.2.0",
     "mongodb": "^2.2.24",
-    "mongoose": "^4.8.2",
+    "mongoose": "^4.8.3",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
+    "react-router": "^3.0.2",
     "should": "^11.2.0",
     "sinon": "^1.17.7",
-    "socket.io": "^1.7.2",
-    "socket.io-client": "^1.7.2"
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0"
   }
 }
